--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,11 +1,13 @@
 
-
+// fortawesome
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
-
+// variables
 @import "./variables";
+// bootstrap
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+// styles
 @import "../modules/styles";
