--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,4 @@
-
+@import "../../public/fonts/Poppins/Poppins-ExtraLight.ttf";
 // fortawesome
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
